[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.1.16,<0.3.0",
    "langchain-core>=0.1.45,<0.3.0",
    "langchain-openai>=0.1.6,<0.3.0",
    "langgraph>=0.2.10,<0.3.0",
    "tavily-python>=0.3.5",
    "python-dotenv>=1.0.1"]
